--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,36 +31,26 @@
 }
 
 body {
+  display: flex;
+	flex-direction: column;
+  align-items: center;
+	min-height: 100vh;
+  width: 100%;
   font-family: "TTLakes", "Nunito", "Roboto", sans-serif;
-  background-color: #F8F8F8;
   font-style: normal;
   font-weight: 400;
+  color: aliceblue;
+  background-color: #000;
 }
 
-.main-container {
-  max-width: 1810px;
-  margin: 0 auto;
-  padding-right: 20px;
-  padding-left: 20px;
+.container {
+	width: 1200px;
 }
 
-/* @media (max-width: 1200px) {
-  .container {
-    padding-right: 50px;
-    padding-left: 50px;
-  }
+.section {
+	margin-bottom: 70px;
 }
-@media (max-width: 576px) {
-  .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-} */
 
-.control {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 6px 12px;
-  width: 100%;
-  margin-bottom: 12px;
+.none {
+	display: none !important;
 }
